Apply minor refactoring
Co-authored-by: Ioannis Panagiotas <ioannis.panagiotas@neotechnology.com>